(maint) drop -XX:MaxPermSize
MaxPermSize was made a noop JVM argument in JDK8; since we no longer
support JDK7 we can omit this option entirely.